<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nano_degree_text">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORE APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

</resources>
